# RedWind

./: .gitignore  README.dev.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: main.yml
client/: App.tsx  main.tsx
client/apis/: crawler.api.ts  post.ts  requests.ts
client/components/: AIchat.tsx  APITest.tsx  Dashboard.tsx  Drawer.tsx  DrillGround.tsx  Modal.tsx  Printer.tsx  RequestTool.tsx  SysInfo.tsx  Terminal.tsx
client/components/charts/: AreaChart.tsx  BarChart.tsx  ChartContainer.tsx  HeatMap.tsx  LineChart.tsx  PieChart.tsx  RadarChart.tsx  ScatterChart.tsx
client/config/: api.config.tsx  contentMap.config.tsx  sidebar.config.ts  startItem.config.ts  typig.config.ts
client/config/data/: charts.ts  conversion.ts
client/context/: activeItemContext.tsx  drawerSettingContext.tsx
client/interface/: post.ts  typing.interface.ts
client/layout/: circle.tsx  drawer.tsx  sidebar.tsx
client/layout/sidebar/: fc_sidebar.ts  sidebar.tsx  sidebar_config.ts
client/mock/: heatmap.mock.ts  radar.mock.ts
client/mock/markdown/: test.md
client/pages/: AIchat.tsx  Algorithms.tsx  Charts.tsx  Chat_AI.tsx  Chat_RsP2P.tsx  Chat_Server.tsx  Communnity.tsx  Conversion.tsx  Crawler.tsx  Dashboard.tsx  Debug.tsx  DocReader.tsx  DrillGround.tsx  English.tsx  Filehandler.tsx  FuncConfigs.tsx  Heatmap.tsx  NetScanner.tsx  P2PChat.tsx  Printer.tsx  Process.tsx  QRCodeGenerator.tsx  Recorder.tsx  RequestTool.tsx  Server.tsx  ServerChat.tsx  Start.tsx  SysCommands.tsx  SysInfo.tsx  TodoList.tsx  Typing.tsx  WAudioController.tsx
client/stores/: aiStore.ts  appStore.ts  commandStore.ts  doc.ts  moduleItemsStore.ts
client/styles/: main.css  sidebar_style.ts
client/utils/: icons.ts  requests.ts  uiState.ts  visible.ts
commands/: cd_dev.bat  extract_release.bat  reload.bat  version_update.bat
doc/: Bug.md  Rust.md  Selection.md  dev.md  devExperience.md  updateLog.md
server/: .env.development  .gitignore  package.json  tsconfig.build.json  tsconfig.json
server/interface/: crawler.interface.ts
server/prisma/: prisma.server.ts
server/src/: app.controller.ts  app.module.ts  app.service.ts  index.ts  router.ts
server/src/accounts/: accounts.controller.ts  accounts.service.ts
server/src/config/: orm.ts
server/src/controller/: chat.ts  posts.ts
server/src/crawler/: crawler.controller.ts  crawler.service.ts
server/src/printer/: printer.controller.ts  printer.service.ts
server/src/tables/: posts.ts
server/static/: index.html
server/utils/: text.ts
src-tauri/: .build.rs.swp  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs  mods.rs
src-tauri/src/database/: init_sidebar.rs  init_typing.rs
src-tauri/src/mods/: commands.rs  conversion.rs  docs.rs  file_handler.rs  hardinfo.rs  net_scanner.rs  node_server.rs  open.rs  p2p_chat.rs  printer.rs  rd_config.rs  sidebar.rs  sqlite.rs  todo.rs  typing.rs  win_audio_control.rs
