[package]
authors = ["fofow"]
description = "Red wind tool library"
edition = "2021"
name = "red-wind"
version = "0.2.0"

[[bin]]
name = "wind-project"
path = "src/main.rs"

[lib]
# 这个配置对 Android/iOS 至关重要
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rusqlite = {version = "0.39.0", features = ["bundled"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
sysinfo = "0.38.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
chrono = "0.4"
