[package]
authors = ["fofow"]
description = "Red wind tool library"
edition = "2021"
name = "red-wind"
version = "0.3.13"
[[bin]]
name = "wind-project"
path = "src/main.rs"
[lib]
# 这个配置Android/iOS 至关重要
crate-type = ["staticlib", "cdylib", "rlib"]
[build-dependencies]
tauri-build = {version = "2", features = [] }
[dependencies]
encoding_rs = "0.8"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rusqlite = {version = "0.39.0", features = ["bundled"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
sysinfo = "0.38.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
chrono = "0.4"
windows = { version = "0.62.2", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio_Endpoints"
] }
opener = "0.8.3"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
encoding = "0.2"
libp2p = {version = "0.56.0", features = [
    "gossipsub",
    "mdns", 
    "tcp",
    "tokio",
    "noise",
    "yamux",
    "quic",
    "identify",
    "ping",
    # 重要的依赖：Bug:26.5.4
    "macros"
] }
futures = "0.3.32"
lazy_static = "1.4"
